//    Copyright 2023 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r5.core;

import "google/protobuf/any.proto";
import "proto/google/fhir/proto/annotations.proto";
import "proto/google/fhir/proto/r5/core/codes.proto";
import "proto/google/fhir/proto/r5/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r5.core";
option (.google.fhir.proto.fhir_version) = R5;
option go_package = "github.com/google/fhir/go/proto/google/fhir/proto/r5/core/resources/code_system_go_proto";

// Auto-generated from StructureDefinition for CodeSystem.
// Declares the existence of and describes a code system or code system
// supplement. See http://hl7.org/fhir/StructureDefinition/CodeSystem
message CodeSystem {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/CodeSystem";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "concept.exists() implies concept.code.combine(%resource.concept.descendants().concept.code).isDistinct()";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "CodeSystem.content = 'supplement' implies CodeSystem.supplements.exists()";
  option (.google.fhir.proto.fhir_path_message_warning_constraint) =
      "name.exists() implies name.matches('^[A-Z]([A-Za-z0-9_]){1,254}$')";
  option (.google.fhir.proto.fhir_path_message_warning_constraint) =
      "concept.concept.exists() implies hierarchyMeaning.exists()";
  option (.google.fhir.proto.fhir_path_message_warning_constraint) =
      "concept.where(property.code = 'parent' or property.code = 'child').exists() implies hierarchyMeaning.exists()";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // CodeSystem.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // Canonical identifier for this code system, represented as a URI (globally
  // unique) (Coding.system)
  Uri url = 10 [(.google.fhir.proto.fhir_path_warning_constraint) =
                    "exists() implies matches('^[^|# ]+$')"];

  // Additional identifier for the code system (business identifier)
  repeated Identifier identifier = 11;

  // Business version of the code system (Coding.version)
  String version = 12;

  // How to compare versions
  message VersionAlgorithmX {
    option (.google.fhir.proto.is_choice_type) = true;

    oneof choice {
      String string_value = 1 [json_name = "string"];
      Coding coding = 2;
    }
  }
  VersionAlgorithmX version_algorithm = 13;

  // Name for this code system (computer friendly)
  String name = 14;

  // Name for this code system (human friendly)
  String title = 15;

  // draft | active | retired | unknown
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/publication-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    PublicationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 16
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // For testing purposes, not real usage
  Boolean experimental = 17;

  // Date last changed
  DateTime date = 18;

  // Name of the publisher/steward (organization or individual)
  String publisher = 19;

  // Contact details for the publisher
  repeated ContactDetail contact = 20;

  // Natural language description of the code system
  Markdown description = 21;

  // The context that the content is intended to support
  repeated UsageContext use_context = 22;

  // Intended jurisdiction for code system (if applicable)
  repeated CodeableConcept jurisdiction = 23;

  // Why this code system is defined
  Markdown purpose = 24;

  // Use and/or publishing restrictions
  Markdown copyright = 25;

  // Copyright holder and year(s)
  String copyright_label = 26;

  // When the CodeSystem was approved by publisher
  Date approval_date = 27;

  // When the CodeSystem was last reviewed by the publisher
  Date last_review_date = 28;

  // When the CodeSystem is expected to be used
  Period effective_period = 29;

  // E.g. Education, Treatment, Assessment, etc
  repeated CodeableConcept topic = 30;

  // Who authored the CodeSystem
  repeated ContactDetail author = 31;

  // Who edited the CodeSystem
  repeated ContactDetail editor = 32;

  // Who reviewed the CodeSystem
  repeated ContactDetail reviewer = 33;

  // Who endorsed the CodeSystem
  repeated ContactDetail endorser = 34;

  // Additional documentation, citations, etc
  repeated RelatedArtifact related_artifact = 35;

  // If code comparison is case sensitive
  Boolean case_sensitive = 36;

  // Canonical reference to the value set with entire code system
  Canonical value_set = 37;

  // grouped-by | is-a | part-of | classified-with
  message HierarchyMeaningCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/codesystem-hierarchy-meaning";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    CodeSystemHierarchyMeaningCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  HierarchyMeaningCode hierarchy_meaning = 38;

  // If code system defines a compositional grammar
  Boolean compositional = 39;

  // If definitions are not stable
  Boolean version_needed = 40;

  // not-present | example | fragment | complete | supplement
  message ContentCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/codesystem-content-mode";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    CodeSystemContentModeCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  ContentCode content = 41
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Canonical URL of Code System this adds designations and properties to
  Canonical supplements = 42;

  // Total concepts in the code system
  UnsignedInt count = 43;

  // Filter that can be used in a value set
  message Filter {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Code that identifies the filter
    Code code = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // How or why the filter is used
    String description = 5;

    // = | is-a | descendent-of | is-not-a | regex | in | not-in | generalizes |
    // child-of | descendent-leaf | exists
    message OperatorCode {
      option (.google.fhir.proto.structure_definition_kind) =
          KIND_PRIMITIVE_TYPE;
      option (.google.fhir.proto.fhir_valueset_url) =
          "http://hl7.org/fhir/ValueSet/filter-operator";
      option (.google.fhir.proto.fhir_profile_base) =
          "http://hl7.org/fhir/StructureDefinition/code";

      FilterOperatorCode.Value value = 1;

      String id = 2;

      repeated Extension extension = 3;
    }
    repeated OperatorCode operator = 6
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // What to use for the value
    String value = 7
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
  }
  repeated Filter filter = 44;

  // Additional information supplied about each concept
  message Property {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Identifies the property on the concepts, and when referred to in
    // operations
    Code code = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // Formal identifier for the property
    Uri uri = 5;

    // Why the property is defined, and/or what it conveys
    String description = 6;

    // code | Coding | string | integer | boolean | dateTime | decimal
    message TypeCode {
      option (.google.fhir.proto.structure_definition_kind) =
          KIND_PRIMITIVE_TYPE;
      option (.google.fhir.proto.fhir_valueset_url) =
          "http://hl7.org/fhir/ValueSet/concept-property-type";
      option (.google.fhir.proto.fhir_profile_base) =
          "http://hl7.org/fhir/StructureDefinition/code";

      PropertyTypeCode.Value value = 1;

      String id = 2;

      repeated Extension extension = 3;
    }
    TypeCode type = 7
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
  }
  repeated Property property = 45;

  // Concepts in the code system
  message ConceptDefinition {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Code that identifies concept
    Code code = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // Text to display to the user
    String display = 5;

    // Formal definition
    String definition = 6;

    // Additional representations for the concept
    message Designation {
      option (.google.fhir.proto.fhir_path_message_constraint) =
          "additionalUse.exists() implies use.exists()";

      // Unique id for inter-element referencing
      String id = 1;

      // Additional content defined by implementations
      repeated Extension extension = 2;

      // Extensions that cannot be ignored even if unrecognized
      repeated Extension modifier_extension = 3;

      // Human language of the designation
      Code language = 4;

      // Details how this designation would be used
      Coding use = 5;

      // Additional ways how this designation would be used
      repeated Coding additional_use = 6;

      // The text value for this designation
      String value = 7
          [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
    }
    repeated Designation designation = 7;

    // Property value for the concept
    message ConceptProperty {
      // Unique id for inter-element referencing
      String id = 1;

      // Additional content defined by implementations
      repeated Extension extension = 2;

      // Extensions that cannot be ignored even if unrecognized
      repeated Extension modifier_extension = 3;

      // Reference to CodeSystem.property.code
      Code code = 4
          [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

      // Value of the property for this concept
      message ValueX {
        option (.google.fhir.proto.is_choice_type) = true;

        oneof choice {
          Code code = 1;
          Coding coding = 2;
          String string_value = 3 [json_name = "string"];
          Integer integer = 4;
          Boolean boolean = 5;
          DateTime date_time = 6;
          Decimal decimal = 7;
        }
      }
      ValueX value = 5
          [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
    }
    repeated ConceptProperty property = 8;

    // Child Concepts (is-a/contains/categorizes)
    repeated ConceptDefinition concept = 9;
  }
  repeated ConceptDefinition concept = 46;
}
